--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- Title and Description Section -->
         <div class="text-center mb-12 max-w-3xl">
             <h1 class="text-5xl font-extrabold tracking-tight text-white sm:text-6xl">
-                Get Started Now
+                Programmalar
             </h1>
             <p class="mt-4 text-xl text-slate-400">
                 Instantly access and download our suite of essential programs below. Simple, fast, and free.
