--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
         <!-- Title and Description Section -->
         <div class="text-center mb-12 max-w-3xl">
             <h1 class="text-5xl font-extrabold tracking-tight text-white sm:text-6xl">
-                Programmalar
+                
+                <p><a href="https://www.tiktok.com/@azimguljanov">Tiktok kanalymda görkezen <br>programmalarym</a></p>
             </h1>
             <p class="mt-4 text-xl text-slate-400">
-                Instantly access and download our suite of essential programs below. Simple, fast, and free.
+                Programmalary şu ýere goýup durjak, gerekler bar bolsa alybermeli. Arhiwleriň paroly: 2025
             </p>
         </div>
 
@@ -48,44 +49,33 @@
             <!-- Program Item -->
             <div class="bg-slate-800 p-6 sm:p-8 rounded-xl shadow-xl mb-6 flex flex-col md:flex-row items-start md:items-center justify-between transition duration-300 ease-in-out hover:bg-slate-700/70 border border-slate-700">
                 <div class="flex-grow mb-4 md:mb-0">
-                    <h2 class="text-2xl font-semibold text-indigo-400">Feem</h2>
-                    <p class="text-slate-400 mt-1">A lightweight tool for system optimization and file cleanup. Compatible with all major operating systems.</p>
+                    <h2 class="text-2xl font-semibold text-indigo-400">Everything</h2>
+                    <p class="text-slate-400 mt-1">Windows-da çalt gözleg etmek üçin. Munuň ýaly çalt gözleg edýän programma ýok öýdýan.</p>
                 </div>
-                <a href="./Progs/x360ce.zip" class="download-button bg-indigo-600 text-white font-medium py-2.5 px-6 rounded-lg text-lg hover:bg-indigo-700 focus:outline-none focus:ring-4 focus:ring-indigo-500/50 flex-shrink-0 w-full md:w-auto text-center">
-                    Download (v3.1)
+                <a href="./Progs/Everything.zip" class="download-button bg-indigo-600 text-white font-medium py-2.5 px-6 rounded-lg text-lg hover:bg-indigo-700 focus:outline-none focus:ring-4 focus:ring-indigo-500/50 flex-shrink-0 w-full md:w-auto text-center">
+                    Programmany indir.
                 </a>
             </div>
 
             <!-- Program Item -->
             <div class="bg-slate-800 p-6 sm:p-8 rounded-xl shadow-xl mb-6 flex flex-col md:flex-row items-start md:items-center justify-between transition duration-300 ease-in-out hover:bg-slate-700/70 border border-slate-700">
                 <div class="flex-grow mb-4 md:mb-0">
-                    <h2 class="text-2xl font-semibold text-indigo-400">Data Vault Encryptor</h2>
-                    <p class="text-slate-400 mt-1">Industrial-grade encryption for securing sensitive documents and backups. Simple one-click execution.</p>
+                    <h2 class="text-2xl font-semibold text-indigo-400">TreeSize</h2>
+                    <p class="text-slate-400 mt-1">Şu programma bilen kompýuteriňizde boş ýer döredip, arassalap bilersiňiz. Haýsy papkanyň ýada faýlyň uly ýer alýanyny görkezýar. Sortlap, ulanmaýan papka, faýllaryňyzy bozup bilersiňiz.</p>
                 </div>
-                <a href="#" class="download-button bg-indigo-600 text-white font-medium py-2.5 px-6 rounded-lg text-lg hover:bg-indigo-700 focus:outline-none focus:ring-4 focus:ring-indigo-500/50 flex-shrink-0 w-full md:w-auto text-center">
-                    Download (Stable)
+                <a href="./Progs/TreeSize_Pro_9.6.0_x64.zip" class="download-button bg-indigo-600 text-white font-medium py-2.5 px-6 rounded-lg text-lg hover:bg-indigo-700 focus:outline-none focus:ring-4 focus:ring-indigo-500/50 flex-shrink-0 w-full md:w-auto text-center">
+                    Programmany indir
                 </a>
             </div>
 
             <!-- Program Item -->
             <div class="bg-slate-800 p-6 sm:p-8 rounded-xl shadow-xl mb-6 flex flex-col md:flex-row items-start md:items-center justify-between transition duration-300 ease-in-out hover:bg-slate-700/70 border border-slate-700">
                 <div class="flex-grow mb-4 md:mb-0">
-                    <h2 class="text-2xl font-semibold text-indigo-400">Infinity Visualizer</h2>
-                    <p class="text-slate-400 mt-1">A powerful, open-source visualization tool for data analysis and charting. Requires Python runtime.</p>
+                    <h2 class="text-2xl font-semibold text-indigo-400">Easy Duplicate Finder</h2>
+                    <p class="text-slate-400 mt-1">Kompýuteriňizdäki birnäçe ýerde ýerleşýän, ýöne meňzeş (Duplicate bolan) faýllary tapyp berýär. Islege görä bozup, kompýuteriňizden ýer boşadyp bilersiňiz.</p>
                 </div>
-                <a href="#" class="download-button bg-indigo-600 text-white font-medium py-2.5 px-6 rounded-lg text-lg hover:bg-indigo-700 focus:outline-none focus:ring-4 focus:ring-indigo-500/50 flex-shrink-0 w-full md:w-auto text-center">
-                    Download (Latest)
-                </a>
-            </div>
-
-            <!-- Program Item -->
-            <div class="bg-slate-800 p-6 sm:p-8 rounded-xl shadow-xl mb-6 flex flex-col md:flex-row items-start md:items-center justify-between transition duration-300 ease-in-out hover:bg-slate-700/70 border border-slate-700">
-                <div class="flex-grow mb-4 md:mb-0">
-                    <h2 class="text-2xl font-semibold text-indigo-400">Code Compiler Suite</h2>
-                    <p class="text-slate-400 mt-1">The essential toolset for developers, featuring compilers for C++, Java, and Rust.</p>
-                </div>
-                <a href="#" class="download-button bg-indigo-600 text-white font-medium py-2.5 px-6 rounded-lg text-lg hover:bg-indigo-700 focus:outline-none focus:ring-4 focus:ring-indigo-500/50 flex-shrink-0 w-full md:w-auto text-center">
-                    Download (Pro)
+                <a href="./Progs/Easy.Duplicate.Finder.zip" class="download-button bg-indigo-600 text-white font-medium py-2.5 px-6 rounded-lg text-lg hover:bg-indigo-700 focus:outline-none focus:ring-4 focus:ring-indigo-500/50 flex-shrink-0 w-full md:w-auto text-center">
+                    Programmany indir
                 </a>
             </div>
             
