--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <h2 class="text-2xl font-semibold text-indigo-400">Google Drive Link</h2>
                     <p class="text-slate-400 mt-1">Beýleki programmalar wagtlaýyn şu ýerde.</p>
                 </div>
-                <a href="./Progs/Easy.Duplicate.Finder.zip" class="download-button bg-indigo-600 text-white font-medium py-2.5 px-6 rounded-lg text-lg hover:bg-indigo-700 focus:outline-none focus:ring-4 focus:ring-indigo-500/50 flex-shrink-0 w-full md:w-auto text-center">
+                <a href="https://drive.google.com/drive/folders/11-XnCC3-RNStETIO5bF7S64vU7p_Q_Ne?usp=drive_link" class="download-button bg-orange-600 text-black-400 font-medium py-2.5 px-6 rounded-lg text-lg hover:bg-indigo-700 focus:outline-none focus:ring-4 focus:ring-indigo-500/50 flex-shrink-0 w-full md:w-auto text-center">
                     Google Drive Link
                 </a>
             </div>
