--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="text-center mb-12 max-w-3xl">
             <h1 class="text-5xl font-extrabold tracking-tight text-white sm:text-6xl">
                 
-                <p><a href="https://www.tiktok.com/@azimguljanov">Tiktok kanalymda görkezen <br>programmalarym</a></p>
+                <p><a href="https://www.tiktok.com/@azimguljanov">Programmalarym</a></p>
             </h1>
             <p class="mt-4 text-xl text-slate-400">
                 Programmalary şu ýere goýup durjak, gerekler bar bolsa alybermeli. Arhiwleriň paroly: 2025
