--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="text-center mb-12 max-w-3xl">
             <h1 class="text-5xl font-extrabold tracking-tight text-white sm:text-6xl">
                 
-                <p><a href="https://www.tiktok.com/@azimguljanov">Programmalarym</a></p>
+                <p><a href="https://www.tiktok.com/@azimguljanov">Programmalar</a></p>
             </h1>
             <p class="mt-4 text-xl text-slate-400">
                 Programmalary şu ýere goýup durjak, gerekler bar bolsa alybermeli. Arhiwleriň paroly: 2025
@@ -75,6 +75,16 @@
                     <p class="text-slate-400 mt-1">Kompýuteriňizdäki birnäçe ýerde ýerleşýän, ýöne meňzeş (Duplicate bolan) faýllary tapyp berýär. Islege görä bozup, kompýuteriňizden ýer boşadyp bilersiňiz.</p>
                 </div>
                 <a href="./Progs/Easy.Duplicate.Finder.zip" class="download-button bg-indigo-600 text-white font-medium py-2.5 px-6 rounded-lg text-lg hover:bg-indigo-700 focus:outline-none focus:ring-4 focus:ring-indigo-500/50 flex-shrink-0 w-full md:w-auto text-center">
+                    Programmany indir
+                </a>
+            </div>
+            <!-- Program Item -->
+            <div class="bg-slate-800 p-6 sm:p-8 rounded-xl shadow-xl mb-6 flex flex-col md:flex-row items-start md:items-center justify-between transition duration-300 ease-in-out hover:bg-slate-700/70 border border-slate-700">
+                <div class="flex-grow mb-4 md:mb-0">
+                    <h2 class="text-2xl font-semibold text-indigo-400">x360ce</h2>
+                    <p class="text-slate-400 mt-1">Kompýuteriňizde birnäçe adam bolup, ekrany 2, 3, 4 bölüp joystick bilen, edil Playstationdaky ýaly oýun oýnap bilersiňiz.</p>
+                </div>
+                <a href="./Progs/x360ce.zip" class="download-button bg-indigo-600 text-white font-medium py-2.5 px-6 rounded-lg text-lg hover:bg-indigo-700 focus:outline-none focus:ring-4 focus:ring-indigo-500/50 flex-shrink-0 w-full md:w-auto text-center">
                     Programmany indir
                 </a>
             </div>
