--- a/index.html
+++ b/index.html
@@ -88,7 +88,16 @@
                     Programmany indir
                 </a>
             </div>
-
+ <!-- Program Item -->
+            <div class="bg-slate-800 p-6 sm:p-8 rounded-xl shadow-xl mb-6 flex flex-col md:flex-row items-start md:items-center justify-between transition duration-300 ease-in-out hover:bg-slate-700/70 border border-slate-700">
+                <div class="flex-grow mb-4 md:mb-0">
+                    <h2 class="text-2xl font-semibold text-indigo-400">X-Mouse Button Control</h2>
+                    <p class="text-slate-400 mt-1">Myşkaňyzyň her bir knopkasyna funksiýa berip bilersiňiz. We elbetde her programma göra knopkalary sazlap bilýärsiňiz. Günlük ulanyşda hökmany gerek programma</p>
+                </div>
+                <a href="./Progs/X-Mouse Button Control Setup.zip" class="download-button bg-indigo-600 text-white font-medium py-2.5 px-6 rounded-lg text-lg hover:bg-indigo-700 focus:outline-none focus:ring-4 focus:ring-indigo-500/50 flex-shrink-0 w-full md:w-auto text-center">
+                    Programmany indir
+                </a>
+            </div>
             <!-- Program Item -->
             <div class="bg-slate-800 p-6 sm:p-8 rounded-xl shadow-xl mb-6 flex flex-col md:flex-row items-start md:items-center justify-between transition duration-300 ease-in-out hover:bg-slate-700/70 border border-slate-700">
                 <div class="flex-grow mb-4 md:mb-0">
